# json_extraction_prompt_engineering

./: .env  README.md  pyproject.toml
concurrency/concurrency-testing/: logging-async.conf  logging-sync.conf  logging-threads.conf  multi-threading.py  prompting.py  responses.txt  save_to_txt.py  synchronous.py
concurrency/concurrency-testing/prompts/: consistency.txt  extract-info.txt
multi-threading/: asyncio_tutorial.py  tutorial.ipynb
multi-threading/concurrency-testing/: concurrency-tests.py  logging.conf  prompting.py
multi-threading/concurrency-testing/prompts/: extract-info.txt
src/json_prompt/: __init__.py  apple_chunks.txt  check_json.py  context.ipynb  json_extractor.py  json_prompt.ipynb  logging.conf  process_chunk.py  samsung_chunks.txt  samsung_split.txt  wiki_extract.py
src/json_prompt/initial_experiments/: json_prompt.ipynb
src/json_prompt/json_extractor/: json_extractor.py  load_prompt.py  wiki_extract.py
src/json_prompt/json_extractor/prompts/: json_extract_prompt.txt  refine_prompt.txt
src/json_prompt/practicing/: json_prompt.ipynb  prompt.ipynb
src/json_prompt/prompts/: refine_prompt.txt  summarize_chunk_prompt.txt
