[tool.poetry]
name = "json-prompt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "json_prompt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
groq = "^0.9.0"
wikipedia-api = "^0.6.0"
urllib3 = "1.26.15"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
langchain = "^0.2.11"
langchain-groq = "^0.1.6"
aiohttp = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
